src/objects/tdc_tsw__SMS_Unsubscribes__c.object
<CustomObject>
    <description>This is used to store the details of unsubscriber in Sender Number-based OPT OUT functionality.</description>
    <fields>
        <fullName>tdc_tsw__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>SMS Unsubscribess</relationshipLabel>
        <relationshipName>SMS_Unsubscribess</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tdc_tsw__Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>SMS Unsubscribess</relationshipLabel>
        <relationshipName>SMS_Unsubscribess</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tdc_tsw__Message__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Message</label>
        <referenceTo>tdc_tsw__Message__c</referenceTo>
        <relationshipLabel>SMS Unsubscribes</relationshipLabel>
        <relationshipName>SMS_Unsubscribes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tdc_tsw__Object__c</fullName>
        <description>Name of the object which the unsubscriber number was on.</description>
        <label>Object</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tdc_tsw__Phone_Number__c</fullName>
        <description>Use to store the unsubscriber number.</description>
        <label>Phone Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tdc_tsw__RecordId__c</fullName>
        <description>Id of the record unsubscribed.</description>
        <label>RecordId</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tdc_tsw__SMS_Opt_Out_In__c</fullName>
        <label>SMS Opt Out/In</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Opt-Out</fullName>
                </value>
                <value>
                    <fullName>Opt-In</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>tdc_tsw__Sender_Number__c</fullName>
        <description>use to store the sender number of the org.</description>
        <label>Sender Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>SMS Unsubscribes</label>
    <listViews>
        <fullName>tdc_tsw__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>SMS Unsubscribes Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SMS Unsubscribes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>